add_library(distorm)
target_sources(distorm
    PRIVATE
"src/config.h"
"src/decoder.c"
"src/decoder.h"
"src/distorm.c"
"src/instructions.c"
"src/instructions.h"
"src/insts.c"
"src/insts.h"
"src/mnemonics.c"
"src/operands.c"
"src/operands.h"
"src/prefix.c"
"src/prefix.h"
"src/textdefs.c"
"src/textdefs.h"
"src/wstring.c"
"src/wstring.h"
"src/x86defs.h"
"include/distorm.h"
"include/mnemonics.h"
)